--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -37,8 +37,7 @@ body{
   height: 169px;
   width: 169px;
   position: absolute;
-  background-image: url(img/photo.png);
-  top: 225px;
+  top: 219px;
   margin-left: 50px;
 }
 
@@ -139,6 +138,85 @@ body{
 
 #presentacio h3{
   background-position: 0 0;
+}
+
+#amistats li{
+  width: 96px;
+  height: 96px;
+  background-color: yellow;
+  margin: 2px;
+  float: left;
+  padding: 0;
+}
+
+#MM{
+  background-image: url(https://mmunozp2019crn.github.io/M08/s2m8uf104_munoz/img/logo.jpg);
+  background-size: cover;
+}
+
+#AC{
+  background-image: url(https://acarranco2019crn.github.io/m08/s2m8uf0104carranco/img/profile.jpg);
+}
+
+#SP{
+  background-image: url(https://sperez2019crn.github.io/M08/s2m8uf104_sperez/img/fotoperfil.jpg);
+  background-size: cover;
+}
+
+#NC{
+  background-image: url(https://nchia2019crn.github.io/M08/s2m8uf104_chia/img/perfil.jpg);
+  background-size: cover;
+}
+
+#OP{
+  background-image: url(https://oparicio2019crn.github.io/M08/UF1/s2m8uf104_oparicio/img/perfil.png);
+  background-size: cover;
+}
+
+#YR{
+  background-image: url(https://yromero2019crn.github.io/M08/UF1/s2m8uf104_facebook/img/perfil1.jpg);
+  background-size: cover;
+}
+
+#AG{
+  background-image: url(https://agarcia2019crn.github.io/M08/s2m8uf104_garciaa/img/perfil.jpg);
+  background-size: cover;
+}
+
+#GB{
+  background-image: url(https://gbonsoms2019crn.github.io/M08/s2m8uf104_facebook/img/pajaro.jpg);
+  background-size: cover;
+}
+
+#VH{
+  background-image: url(https://vherrero2019crn.github.io/M08/s2m8uf104facebook/img/perfil.png);
+  background-size: cover;
+}
+
+#SF{
+  background-image: url(https://sfernandez2019crn.github.io/M08/s2m8uf104_fernandez/img/gos.png);
+  background-size: cover;
+}
+
+#SG{
+  background-image: url(https://sgarzon2019crn.github.io/M08/s2m8uf104_facebook/img/perfil.jpg);
+  background-size: cover;
+}
+
+#NP{
+  background-image: url(https://iprados2019crn.github.io/M08/s2m8uf104_iprados/img/fotoperfil.jpg);
+  background-size: cover;
+}
+
+#amistats ul{
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+#amistats a:link{
+  color: white;
+  text-decoration: none;
 }
 
 #amistats h3{
