--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -147,6 +147,8 @@ body{
   margin: 2px;
   float: left;
   padding: 0;
+  position: relative;
+  color: white;
 }
 
 #MM{
@@ -156,6 +158,7 @@ body{
 
 #AC{
   background-image: url(https://acarranco2019crn.github.io/m08/s2m8uf0104carranco/img/profile.jpg);
+  background-size: cover;
 }
 
 #SP{
@@ -214,9 +217,12 @@ body{
   overflow: hidden;
 }
 
-#amistats a:link{
+#amistats li a:link{
   color: white;
   text-decoration: none;
+  position: absolute;
+  bottom: 0;
+  font-size: 12px;
 }
 
 #amistats h3{
