--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -120,7 +120,7 @@ body{
   border: solid 1px #DDD;
   float: right;
   height: 180px;
-  margin-top: -30px;
+  margin-top: -27px;
 }
 
 #seccions h3{
@@ -211,6 +211,22 @@ body{
   background-size: cover;
 }
 
+#fotos li{
+  width: 96px;
+  height: 96px;
+  background-color: yellow;
+  margin: 2px;
+  float: left;
+  color: white;
+  position: relative;
+}
+
+#fotos ul{
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
 #amistats ul{
   padding: 0;
   margin: 0;
@@ -233,6 +249,10 @@ body{
   background-position: 0 -24px;
 }
 
+#surprise h3{
+  background-position: 0 -72px;
+}
+
 #presentacio .estudis{
   list-style-image: url(iconetes/icones_estudis.png);
 }
@@ -247,4 +267,76 @@ body{
 
 #presentacio .estado{
   list-style-image: url(iconetes/icones_sentimental.png);
+}
+
+#estat #crear {
+  height: 50px;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+#crear{
+  height: 38px;
+  width: 516px;
+  padding: 12px;
+  margin: 0;
+  overflow: hidden;
+  position: relative;
+  background-color: #f5f5f7;
+  left: -12px;
+}
+
+#estat{
+  overflow: hidden;
+  width: 492px;
+  padding: 0 12px;
+  position: relative;
+}
+
+#crear li{
+  list-style: none;
+  float: left;
+  padding: 0 10px;
+  line-height: 40px;
+  height: 50px;
+  margin: 0 0 0 1px;
+  font-size: 8pt;
+  background-color: #f5f5f7;
+}
+
+#pensament{
+  display: block;
+  clear: left;
+  padding: 12px;
+  position: relative;
+  height: 73px;
+  width: 516px;
+  left: 50px;
+  font-size: 1.1em;
+  border: 0;
+}
+
+#mini_me{
+  height: 40px;
+  width: 40px;
+  float: left;
+  border-radius: 100%;
+  margin-left: 12px;
+  position: absolute;
+  top: 20px;
+  z-index: 100;
+  float: left;
+  clear: left;
+  margin-top: 55px;
+}
+
+#botonera_estat{
+  height: 38px;
+  width: 516px;
+  padding: 0;
+  margin-top: 0px;
+  background-color: yellow;
+  margin-left: -12px;
 }
