--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -41,8 +41,8 @@ body{
   height: 169px;
   width: 169px;
   position: absolute;
-  top: 219px;
-  margin-left: 50px;
+  top: -25px;
+  margin-left: -200px;
 }
 
 #vacio{
@@ -507,6 +507,7 @@ body{
     padding: 0;
     background-color: white;
     font-family: 'Lucida Grande', tahoma, Segoe UI, San Francisco, Roboto;
+    overflow-x: hidden;
   }
 
   #barra{
