--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -329,10 +329,6 @@ body{
   color: blue;
 }
 
-#publica{
-
-}
-
 #publica_foto{
   color: blue;
 }
@@ -532,7 +528,7 @@ body{
     width: 162px;
     background-repeat: no-repeat;
     list-style-type: none;
-    margin-top: 170px;
+    margin-top: 100px;
   }
 
 
@@ -687,6 +683,7 @@ body{
 
   #surprise h3{
     text-indent: 35px;
+    background-position: 0 -73px;
   }
 
   #presentacio .estudis{
@@ -799,7 +796,7 @@ body{
     height: 38px;
     padding: 0;
     float: left;
-    margin-right: 40px;
+    margin-right: 28px;
     margin-top: -5px;
     background-color: #f5f5f7;
     position: relative;
@@ -844,7 +841,6 @@ body{
   #comentari{
     height: 40px;
     width: 40px;
-    margin-top: 15px;
     margin-left: 22px;
     position: relative;
   }
@@ -852,7 +848,7 @@ body{
   .likes li{
     list-style-type: none;
     display: inline-block;
-    margin-right: 50px;
+    margin-right: 20px;
     font-size: 12pt;
     text-indent: 28px;
     height: 25px;
@@ -903,7 +899,7 @@ body{
     display: block;
     position: relative;
     height: 35px;
-    width: 400px;
+    width: 350px;
     left: 15px;
     font-size: 1em;
     border-radius: 20px;
@@ -917,7 +913,6 @@ body{
     float:left;
     width: 33px;
     height: 33px;
-    margin-left: 22px;
   }
 
 
