--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -848,9 +848,9 @@ body{
   .likes li{
     list-style-type: none;
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 10px;
     font-size: 12pt;
-    text-indent: 28px;
+    text-indent: 25px;
     height: 25px;
     line-height: 25px;
   }
@@ -899,14 +899,14 @@ body{
     display: block;
     position: relative;
     height: 35px;
-    width: 350px;
+    width: 250px;
     left: 15px;
     font-size: 1em;
     border-radius: 20px;
     border: 0;
     background-color: #f5f5f7;
     text-indent: 15px;
-    margin-right: 20px;
+    margin-left: 50px;
   }
 
   #coment_foto{
