--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -904,7 +904,7 @@ body{
     font-size: 1em;
     border-radius: 20px;
     border: 0;
-    background-color: #f5f5f7;
+    background-color: red;
     text-indent: 15px;
     margin-left: 50px;
   }
