--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -789,21 +789,21 @@ body{
 
   #botonera_estat{
     height: 38px;
-    width: 516px;
+    width: 510px;
   }
 
   #botonera_estat li{
     height: 38px;
     padding: 0;
     float: left;
-    margin-right: 28px;
+    margin-right: 25px;
     margin-top: -5px;
     background-color: #f5f5f7;
     position: relative;
     list-style-type: none;
     border-radius: 20px;
     line-height: 38px;
-    text-indent: 25px;
+    text-indent: 23px;
     margin-left: -25px;
   }
 
@@ -847,8 +847,9 @@ body{
 
   .likes li{
     list-style-type: none;
+    font-size: 1em;
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 5px;
     font-size: 12pt;
     text-indent: 25px;
     height: 25px;
@@ -899,14 +900,13 @@ body{
     display: block;
     position: relative;
     height: 35px;
-    width: 250px;
+    width: 280px;
     left: 15px;
     font-size: 1em;
     border-radius: 20px;
     border: 0;
-    background-color: red;
-    text-indent: 15px;
-    margin-left: 50px;
+    background-color: #F5F5F5;
+    text-indent: 10px;
   }
 
   #coment_foto{
