--- a/UF1/s2m8uf104_facebook/facebook_w.css
+++ b/UF1/s2m8uf104_facebook/facebook_w.css
@@ -410,7 +410,7 @@ body{
 
 #entrada1{
   margin-top: -1400px;
-  height: 225px;
+  height: 264px;
 }
 
 #comentari{
@@ -490,6 +490,22 @@ body{
   width: 33px;
   height: 33px;
   margin-left: 22px;
+}
+
+#entrada2{
+  margin-top: -1123px;
+  height: 500px;
+}
+
+#entrada2 h6{
+  margin-left: 10px;
+  margin-top: 3px;
+}
+
+.dreta iframe{
+  width: 495px;
+  height: 300px;
+  margin-left: 10px;
 }
 
 }
@@ -914,6 +930,8 @@ body{
     width: 33px;
     height: 33px;
   }
+
+
 
 
 }
