--- a/APP_teachme/Roll.css
+++ b/APP_teachme/Roll.css
@@ -13,7 +13,7 @@ body{
   text-align: center;
   border-radius: 35px;
   line-height: 53px;
-  font-size: 27px;
+  font-size: 25px;
   text-indent: -80px;
   text-decoration: none;
 }
@@ -35,7 +35,7 @@ body{
   text-align: center;
   border-radius: 35px;
   line-height: 53px;
-  font-size: 27px;
+  font-size: 25px;
   text-indent: -80px;
   text-decoration: none;
 }
@@ -51,11 +51,13 @@ h1{
   color: white;
   margin-top: 160px;
   text-align: center;
+  font-size: 30px;
 }
 
 a{
   text-decoration: none;
   cursor: pointer;
+  color: white;
 }
 
 
