--- a/APP_teachme/chat.css
+++ b/APP_teachme/chat.css
@@ -34,9 +34,9 @@
 
   .container {
     position: relative;
-    margin: 12% auto;
+    margin: 0 auto;
     width: 100%;
-    height: 450px;
+    height: 550px;
   }
 
   .chatbox {
@@ -44,6 +44,7 @@
     height: 100%;
     width: 100%;
     border-radius: 10px;
+    background-color: red;
     box-shadow: 5px 5px 15px rgba(dark, 0.5);
   }
 
@@ -83,7 +84,7 @@
     background: $white;
     width: 100%;
     opacity: 0.85;
-    top: 60px;
+    top: 10px;
     height: 80%;
   }
 
@@ -107,16 +108,6 @@
     }
   }
 
-
-  .ellipsis {
-    width: 5px;
-    height: 5px;
-    display: inline-block;
-    background: lighten($dark, 25%);
-    border-radius: 50%;
-    animation: bounce 1.3s linear infinite;
-  }
-
   .one {
     animation-delay: 0.6s;
   }
@@ -131,11 +122,11 @@
     position: relative;
     display: inline-block;
     margin-bottom: 5px;
-    color: black;
+    color: #FF2C9C;
     font-size: 0.9em;
     padding: 10px 10px 10px 12px;
-    border-radius: 20px;
-    background-color: #FF2C9C;
+    border-radius: 5px;
+    background-color: white;
   }
 
   .lower {
@@ -147,7 +138,7 @@
     padding: 20px;
     right: 0;
     top: 15%;
-    width: 50%;
+    width: 57%;
     height: 100%;
     .bubble {
       background: white;
@@ -170,10 +161,10 @@
   input {
     padding: 7px;
     width: 85%;
-    left: 5px;
+    left: 10px;
     position: absolute;
     border: 0;
-    margin-top: 20%;
+    margin-top: 30%;
     background: white;
     color: primary;
     border-radius: 10px;
