--- a/CodigoApp/css/home.css
+++ b/CodigoApp/css/home.css
@@ -9,7 +9,6 @@
     padding: 0;
     font-family: 'Nunito', sans-serif;
     color: #cdcdcd;
-    overflow-y: hidden;
     overflow-x: hidden;
   }
 
@@ -19,6 +18,15 @@
     background-color: #FF2C9C;
     margin: 0;
     padding: 0;
+    position: fixed;
+    margin-top: -90px;
+  }
+
+  h3{
+    text-align: center;
+    color: white;
+    font-size: 25px;
+    margin-top: 15px;
   }
 
   a{
@@ -34,7 +42,7 @@
   #menuToggle{
     display: block;
     position: relative;
-    top: 20px;
+    top:-55px;
     left: 25px;
     z-index: 1;
     -webkit-user-select: none;
@@ -93,7 +101,7 @@
   }
 
   #menu{
-    position: absolute;
+    position: relative;
     width: 220px;
     margin: -100px 0 0 -50px;
     padding: 50px;
@@ -104,7 +112,7 @@
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-    height: 200vh;
+    height: 610px;
   }
 
   #menu li{
@@ -123,7 +131,7 @@
     border-radius: 50%;
     margin-left: 20%;
     margin-bottom: 15px;
-    background-image: url(img/pic.jpg);
+    background-image: url(../img/pic.jpg);
     background-size: cover;
   }
 
@@ -131,25 +139,40 @@
     font-size: 20px;
     color: black;
     text-align: center;
-    margin-bottom: 25px;
   }
   h2{
     color: white;
-    padding-left: 3%;
-    padding-top: 3%
+    margin-left: 25px;
+    padding-top: 8%;
 
   }
   .contenedor{
     margin: 0 auto;
-    margin-top: 10px;
     width: 95%;
     height: 350px;
     background-color: #ccc;
     border-radius: 5%;
+    margin-top: 10px;
   }
 
   #post1{
-    background-image: url("../img/post.jpg");
+    background-image: url("../img/chica.jpg");
     background-size: cover;
+    margin-top: 90px;
+  }
+
+  #post2{
+    background-image: url("../img/chico.jpg");
+    background-size: cover;
+  }
+
+  #post3{
+    background-image: url("../img/estudio.jpg");
+    background-size: cover;
+  }
+
+  p{
+    margin: 25px;
+    color: white;
   }
 }
